@@ -47,7 +47,11 @@ Improvements
 
 Optimizations
 ---------------------
+
 * GITHUB#13828: Reduce long[] array allocation for bitset in readBitSetIterator. (Zhang Chao)
+
+* GITHUB#13800: MaxScoreBulkScorer now recomputes scorer partitions when the
+  minimum competitive allows for a more favorable partitioning. (Adrien Grand)
 
 Bug Fixes
 ---------------------
